Panel field: fixed alignment for certain embeds

--- a/field/assets/css/field.css
+++ b/field/assets/css/field.css
@@ -14,6 +14,10 @@
   text-align: center;
 }
 
+.field-oembed-preview__bucket .kirby-plugin-oembed {
+  text-align: left;
+}
+
 .field-oembed-preview__bucket iframe,
 .field-oembed-preview__bucket object {
   margin-right: auto;
